<resources>
    <string name="app_name">CreateAIGenie: Crafted by AI, Inspired by You</string>
    <string name="app_name_title">CreateAIGenie</string>
    <string name="all_in_one_gpt_is_an_media_content_generator_developed_by_tpsk_and_launched_in_september_2023">CreateAIGenie is an media content generator developed by Task and launched in september 2023.</string>
    <string name="all_in_one_gpt">CreateAIGenie</string>
    <string name="hint">hint</string>
    <string name="home">Home</string>
    <string name="assistant">AI Assistants</string>
    <string name="book">Book</string>
    <string name="voice">Voice</string>
    <string name="text_to_speech">Text TO Speech</string>
    <string name="speech_rate">Speech Rate</string>
    <string name="market_place">Market Place</string>
    <string name="history">History</string>
    <string name="write_your_message">Write your message</string>
    <string name="scan_text">Scan a text</string>
    <string name="continues">Continue</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="chat">Chat</string>
    <string name="featured">Featured</string>
    <string name="generate_image">Generate Image</string>
    <string name="re_generate">Re - Generate</string>
    <string name="image_generate">Image Generate </string>
    <string name="generate_to_music">Generate  to Music</string>
    <string name="generate_another_image">Generate another image</string>
    <string name="generate_ai">Generate AI</string>
    <string name="generated_ai">Generated AI</string>
    <string name="view_cat">View Marketplace</string>
    <string name="generate_image_caption">Generate Caption</string>
    <string name="video_editor">Video Editor</string>
    <string name="text_to_video">Text To Video</string>
    <string name="text_to_music">Text To Music</string>
    <string name="share_app">Share App</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Log Out</string>
    <string name="tutorial">Tutorial</string>
    <string name="help">Help Center</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="subscription">Subscription</string>
    <string name="plans">Plans</string>
    <string name="feedback">Feedback</string>
    <string name="faq">FAQ</string>
    <string name="about_app">About App</string>
    <string name="theme">Theme</string>
    <string name="default1">Default</string>
    <string name="pip">PiP</string>
    <string name="drafts">Drafts</string>
    <string name="trimmer">Trimmer</string>
    <string name="others">Others</string>
    <string name="clear">Clear</string>
    <string name="add_cat">Generate AI</string>
    <string name="instruction_description">Chat with the world\'s most advanced AI on your mobile phone and receive instant answers.</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="denied_permission">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
    <string name="hi">Hi! How can I help you?</string>
    <string name="hi1">How can I assist you?</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="cat1">Language Services</string>
    <string name="cat1_sub1">Translation</string>
    <string name="cat1_sub2">Copy Writing</string>
    <string name="cat2">Technical Services</string>
    <string name="cat2_sub1">Coding</string>
    <string name="cat2_sub2">Debugging</string>
    <string name="cat3">Business</string>
    <string name="cat3_sub1">Business Strategies</string>
    <string name="cat3_sub2">Ideas</string>
    <string name="cat3_sub3">Buyer Persona</string>
    <string name="cat3_sub4"> Case Study</string>
    <string name="cat4">Education</string>
    <string name="cat4_sub1">Study</string>
    <string name="cat4_sub2">Email Template Writer</string>
    <string name="cat4_sub3">Sentiment Analysis</string>
    <string name="cat5">Marketing</string>
    <string name="cat5_sub1">Marketing</string>
    <string name="cat5_sub2">Job Application</string>
    <string name="cat5_sub3">FAQ</string>
    <string name="market1">Sports</string>
    <string name="market2">Study</string>
    <string name="market3">Media</string>
    <string name="market4">Medical</string>
    <string name="market5">Fitness</string>
    <string name="market6">Travel &amp;Explore</string>
    <string name="market7">Science &amp;Learning</string>
    <string name="market8">Creative idea</string>
    <string name="market9">Beauty &amp;Lifestyle</string>
    <string name="sub_text1">After the 3-day free trail period you\'ll be change ₹480.00 per week unless you cancel before the trail expire. Weekly Subsciption is Auto-Renewable</string>
    <string name="sub_text2">Subscription auto-renews on every 1-year unless you cancel your subscription.</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="pro_plan">Pro plan</string>
    <string name="pro_plan1">All our very best features in one package.</string>
    <string name="starter_plan">Starter plan</string>
    <string name="starter_plan1">For the curious who wants to get started with AI.</string>
    <string name="word_credits">Word credits</string>
    <string name="word_credits1">Buy individual word and image credits.</string>
    <string name="loved">Loved by 400 000+ AI creators</string>
    <string name="c_ontinue">Continue</string>
    <string name="upgrade">Upgrade</string>
    <string name="pro_plan_offer1">Everything in Starter, plus:</string>
    <string name="pro_plan_offer2">70,000 word credits</string>
    <string name="pro_plan_offer3">60 image credits</string>
    <string name="pro_plan_offer4">Unlimited* Marve Chat</string>
    <string name="pro_plan_offer5">15 videos Brand Voice</string>
    <string name="pro_plan_offer6">Unlimited* GPT-4</string>
    <string name="pro_plan_offer7">Unlimited Document Editor</string>
    <string name="starter">Starter</string>
    <string name="starter1">Everything in Free, plus:</string>
    <string name="starter2">30,000 words/month</string>
    <string name="starter3">40 Image generation</string>
    <string name="starter4">30+ languages</string>
    <string name="starter5">7 Brand Voice</string>
    <string name="word1">1,000 Word Credits</string>
    <string name="word2">Word credits are one-time purchases (no subscription) and never expires after it is purchased.</string>
    <string name="word3">10 Extra Images</string>
    <string name="word4">GPT-4</string>
    <string name="word5">GPT-3.5 Turbo</string>
    <string name="word6">Marve Chat</string>
    <string name="word7">60+ AI Tools</string>
    <string name="total_order">Total Order</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="stop_generate">Stop generate</string>
    <string name="suggestion">Suggestion</string>
    <string name="output_in">Output In</string>
    <string name="tone">Tone</string>
    <string name="writing_style">Writing Style</string>
    <string name="keyword">Keyword</string>
    <string name="introduction">Introduction</string>
    <string name="introduction_page2">Category Quest</string>
    <string name="introduction_page3">Personalisation</string>
    <string name="introduction_page4">InstaScript</string>
    <string name="introduction_desc_page2">Generate striking visuals, engaging videos, persuasive text, expert voiceovers, and distinct music effortlessly using our feature like, Artsy.AI, Text to Speech and AI Bot text generator </string>
    <string name="introduction_desc_page3">Unleashing the power of words, one personalized message at a time – because your conversation deserves a touch of magic.</string>
    <string name="introduction_desc">Revolutionise communication with our advanced AI, mastering language tasks effortlessly for enhanced efficiency and seamless interaction </string>
    <string name="introduction_desc_page4">Effortlessly generate real-time, tailored content with our AI Bot- your ultimate solution for your social media engagement . Make your  Gmail, subtitles or article article effortless and convenient. </string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="use_most_recent">Use Most Recent</string>
    <string name="most_trending">Most Trending</string>
    <string name="music">Music</string>
    <string name="see_all">See All</string>
    <string name="action_sort">Sort</string>
    <string name="all_image">All Images</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">Brightness</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="what_describe_you_best">What describes you best?</string>
    <string name="personal_user">Personal User</string>
    <string name="creator">Creator</string>
    <string name="enterprise">Enterprise</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="brand_voice">Brand Voice</string>
    <string name="general_user">General User</string>
    <string name="choose_plan">Choose the best plan for you !</string>
    <string name="Chat_with_bot_General">Chat with bot: 15 chats per day</string>
    <string name="Generate_Image_General">Generate Image: 10 images per day</string>
    <string name="Text_to_Video_general">Text to Video: 5 videos per day</string>
    <string name="Video_and_image_editor_general">Video and Image Editor</string>
    <string name="Chat_with_bot_Creator">Chat with bot: 35 chats per day</string>
    <string name="Generate_Image_Creator">Generate Image: 15 images per day</string>
    <string name="Text_To_Video_Creator">Text to Video: 5 videos per day</string>
    <string name="Fine_Tune_and_Other_Templates">Fine Tune and use templates</string>
    <string name="Chat_with_bot_Enterprise_Plan">Chat with bot: unlimited chats per day</string>
    <string name="Generate_Image_Enterprise_Plan">Generate Image: unlimited images per day</string>
    <string name="Text_To_Video_Enterprise_Plan">Text to Video: unlimited videos per day</string>
    <string name="Custom_Chat_models_Advanced_AI_Enterprise_Plan">Custom Chat Models and Advanced AI</string>
    <string name="register">Register</string>
</resources>