<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navChat"
        android:icon="@drawable/online_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/navGenerateImage"
        android:icon="@drawable/voicetoimg"
        android:iconTint="@color/black"
        android:title="@string/generate_image" />
    <item
        android:id="@+id/navTextToVideo"
        android:icon="@drawable/text_to_video"
        android:title="@string/text_to_video" />
    <item
        android:id="@+id/navTextToMusic"
        android:icon="@drawable/music"
        android:title="@string/text_to_music" />

    <item
        android:id="@+id/navChangeVoice"
        android:icon="@drawable/voice_message"
        android:title="@string/voice" />

    <item
        android:id="@+id/navShareApp"
        android:icon="@drawable/share1"
        android:title="@string/share_app" />

    <item
        android:id="@+id/navRateUs"
        android:icon="@drawable/rate_us"
        android:title="@string/rate_us" />

    <item
        android:id="@+id/navPrivacyPolicy"
        android:icon="@drawable/privacy_policy"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/navLogOut"
        android:icon="@drawable/log_out"
        android:title="@string/logout" />
</menu>