<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plans"
            android:textColor="@color/black"
            android:padding="6dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:fontFamily="@font/bold"
            />
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/back"
            android:padding="8dp"
            android:layout_centerVertical="true"
            app:tint="@color/black" />



    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_plan"
            android:fontFamily="@font/lora_bold"
            android:textSize="20dp"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/main_color"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:src="@drawable/plans"
            />

        <LinearLayout
            android:id="@+id/llIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="right"

            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:text=""
                android:checked="false"
                app:trackTint="@color/switch_track_selector"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yearly"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >
            <LinearLayout
                android:id="@+id/generalUserBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_round_corner_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@drawable/dollar"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/general_user"
                        android:fontFamily="@font/lora_bold"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:layout_marginVertical="10dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:textColor="@color/black"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Chat_with_bot_General"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Generate_Image_General"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Text_to_Video_general"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Video_and_image_editor_general"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/creatorBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_round_corner_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@drawable/dollar"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creator"
                        android:fontFamily="@font/lora_bold"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:layout_marginVertical="10dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:textColor="@color/black"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Chat_with_bot_Creator"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Generate_Image_Creator"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Text_To_Video_Creator"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fine_Tune_and_Other_Templates"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/enterpriseBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_round_corner_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@drawable/dollar"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enterprise"
                        android:fontFamily="@font/lora_bold"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:layout_marginVertical="10dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:textColor="@color/black"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Chat_with_bot_Enterprise_Plan"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Generate_Image_Enterprise_Plan"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Text_To_Video_Enterprise_Plan"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Custom_Chat_models_Advanced_AI_Enterprise_Plan"
                        android:textColor="@color/main_color"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/poppins_regular"/>

                </LinearLayout>


            </LinearLayout>


        </HorizontalScrollView>

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/main_color"
            android:text="@string/register"
            android:textColor="@color/white_text"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:drawablePadding="10dp"
            android:textSize="18dp"
            android:paddingHorizontal="20dp"
            android:fontFamily="@font/poppins_regular"
            />

    </LinearLayout>

</LinearLayout>
