<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ui.authentication.view.OnboardingActivity$UserTypeActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_title"
        android:fontFamily="@font/bold"
        android:textSize="24dp"
        android:padding="5dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_describe_you_best"
        android:fontFamily="@font/lora_bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginVertical="15dp"
        android:padding="3dp"
        android:textColor="@color/main_color"/>


    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/group"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personal_user"
                android:textColor="@color/black"
                android:layout_margin="2dp"
                android:checked="true"
                android:textSize="18dp"
                android:fontFamily="@font/poppins_regular"
                android:buttonTint="@color/main_color"/>

            <RadioButton android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                android:textColor="@color/black"
                android:layout_margin="2dp"
                android:textSize="18dp"
                android:fontFamily="@font/poppins_regular"
                android:buttonTint="@color/main_color"/>

            <RadioButton android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterprise"
                android:textColor="@color/black"
                android:layout_margin="2dp"
                android:textSize="18dp"
                android:fontFamily="@font/poppins_regular"
                android:buttonTint="@color/main_color"/>


        </RadioGroup>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@drawable/bg_round_corner_black"
            android:text="@string/continues"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:drawableRight="@drawable/next1"
            android:drawableTint="@color/black"
            android:drawablePadding="10dp"
            android:textSize="18dp"
            android:paddingHorizontal="20dp"
            android:fontFamily="@font/poppins_regular"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15dp"
                android:fontFamily="@font/poppins_regular"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/main_color"
                android:gravity="center"
                android:textSize="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>